--- a/auth-service/requirements.txt
+++ b/auth-service/requirements.txt
@@ -1,7 +1,8 @@
 fastapi
 uvicorn[standard]
 python-jose[cryptography]
-passlib[bcrypt]
+passlib[argon2]
 email-validator
 python-dotenv
 argon2-cffi
+SQLAlchemy
