--- a/auth-service/.env.example
+++ b/auth-service/.env.example
@@ -2,11 +2,11 @@ APP_ENV=local
 HOST=0.0.0.0
 PORT=8000
 
-JWT_SECRET= Auth-service_Key123
+JWT_SECRET=Auth_service_Key123
 JWT_ALGO=HS256
 JWT_EXP_MIN=60
 
-DATA_FILE=data/usuarios.json
+DATABASE_URL=sqlite:///./data/auth.db
 
 SMTP_HOST=mailhog
 SMTP_PORT=1025
