--- a/auth-service/.env.example
+++ b/auth-service/.env.example
@@ -6,7 +6,7 @@ JWT_SECRET=Auth_service_Key123
 JWT_ALGO=HS256
 JWT_EXP_MIN=60
 
-DATABASE_URL=sqlite:///./data/auth.db
+DATABASE_URL=postgresql://authuser:authpass@db:5432/authdb
 
 SMTP_HOST=mailhog
 SMTP_PORT=1025
