--- a/inventario_api/docker-compose.yml
+++ b/inventario_api/docker-compose.yml
@@ -1,15 +1,20 @@
 
 services:
-  # Tu aplicación Rust
   api:
     build: 
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "5002:5002"
     environment:
       - RUST_LOG=info
-      - DATABASE_URL=postgres://postgres:password@db:5432/inventario_db
+      - DB_USER=postgres
+      - DB_PASSWORD=password
+      - DB_HOST=db
+      - DB_DATABASE=inventario_db
+      - DB_PORT=5435
+      - PORT=5002
+
     depends_on:
       db:
         condition: service_healthy
@@ -24,7 +29,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
     ports:
-      - "5432:5432"
+      - "5435:5435"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
