--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker:build": "docker build -t frontend-vue .",
+    "docker:run": "docker run -p 5173:80 frontend-vue",
+    "docker:compose": "docker-compose up -d",
+    "docker:compose-build": "docker-compose up -d --build",
+    "env:setup": "cp .env.example .env && echo '✅ .env creado. Edita con tus valores.'"
   },
   "dependencies": {
     "axios": "^1.13.2",
