--- a/products-service/src/composer.json
+++ b/products-service/src/composer.json
@@ -7,9 +7,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "firebase/php-jwt": "^6.11",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
-        "tymon/jwt-auth": "^2.2"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
