Add role-based access control (RBAC) to Auth Service

--- a/auth-service/docker-compose.yml
+++ b/auth-service/docker-compose.yml
@@ -1,38 +1,49 @@
 version: "3.8"
+
 services:
-  db:
-    image: postgres:15
+  auth-db:
+    image: postgres:15-alpine
     container_name: auth-db
     environment:
-      POSTGRES_USER: authuser
-      POSTGRES_PASSWORD: authpass
-      POSTGRES_DB: authdb
+      POSTGRES_USER: auth_user
+      POSTGRES_PASSWORD: auth_pass
+      POSTGRES_DB: auth_db
+    ports:
+      - "5435:5432"  
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - auth_postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U auth_user -d auth_db"]
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - auth_network
 
   auth:
     build: .
-    container_name: auth
+    container_name: auth_service
     env_file: .env
     ports:
       - "8000:8000"
-    volumes:
-      - ./data:/app/data
     depends_on:
-      db:
+      auth-db:
         condition: service_healthy
+    networks:
+      - auth_network
 
   mailhog:
     image: mailhog/mailhog
-    container_name: auth-mailhog
+    container_name: auth_mailhog
     ports:
       - "1025:1025"
       - "8025:8025"
+    networks:
+      - auth_network
 
 volumes:
-  postgres_data:
+  auth_postgres_data:
+
+networks:
+  auth_network:
+    driver: bridge
