--- a/inventario_api/.env.example
+++ b/inventario_api/.env.example
@@ -1,10 +1,3 @@
-DB_USER=postgres
-DB_PASSWORD=
-DB_HOST=localhost
-DB_DATABASE=postgres
-DB_PORT=5435
-
 PORT=5002
-
-HASH=
-TOKEN=
+DATABASE_URL=postgresql://postgres:password@host:5432/inventario_db
+JWT_SECRET_KEY=
