Integrate auth and product services, fix DB types and sqlx config

--- a/inventario_api/docker-compose.yml
+++ b/inventario_api/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - RUST_LOG=info
       - DATABASE_URL=postgresql://postgres:password@db:5432/inventario_db
       - PORT=5002
-      - JWT_SECRET_KEY=token
+      - JWT_SECRET_KEY=MiSuperSecretKeyParaDistributed2025System!
+      - RUST_BACKTRACE=1
 
     depends_on:
       db:
