--- a/inventario_api/Cargo.toml
+++ b/inventario_api/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2024"
 [dependencies]
 axum = "0.7"
 tokio = { version = "1.37", features = ["full"] } 
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
+sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
 
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4.42", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
