--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,13 +1,4 @@
-# .env.example
-# Auth Service
 VITE_AUTH_API_URL=http://localhost:8000/api
-
-# Products Service  
 VITE_PRODUCTS_API_URL=http://localhost:8001/api
-
-# Inventory Service
 VITE_INVENTORY_API_URL=http://localhost:5002/api
-
-# App Configuration
-VITE_APP_NAME="Distributed System Frontend"
-VITE_APP_ENV=development
+VITE_APP_NAME=AudioHub
