--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -7,6 +7,16 @@ RUN npm install
 
 COPY . .
 
+ARG VITE_AUTH_API_URL
+ARG VITE_PRODUCTS_API_URL
+ARG VITE_INVENTORY_API_URL
+ARG VITE_APP_NAME
+
+ENV VITE_AUTH_API_URL=$VITE_AUTH_API_URL
+ENV VITE_PRODUCTS_API_URL=$VITE_PRODUCTS_API_URL
+ENV VITE_INVENTORY_API_URL=$VITE_INVENTORY_API_URL
+ENV VITE_APP_NAME=$VITE_APP_NAME
+
 RUN npm run build
 
 FROM nginx:alpine as production-stage
