dockerfile with migrations

--- a/inventario_api/Dockerfile
+++ b/inventario_api/Dockerfile
@@ -14,9 +14,12 @@ WORKDIR /app
 COPY Cargo.toml Cargo.lock ./
 COPY src ./src
 COPY .sqlx .sqlx
+COPY migrations ./migrations
 
 # Build de la aplicación
 RUN cargo build --release
+
+RUN cargo install sqlx-cli --no-default-features --features postgres
 
 # Runtime image - usar la misma base que el builder
 FROM debian:bullseye-slim AS runtime
@@ -26,6 +29,7 @@ RUN apt-get update && apt-get install -y \
     libpq5 \
     ca-certificates \
     curl \
+    postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
 RUN groupadd -r app && useradd -r -g app app
@@ -33,6 +37,8 @@ RUN groupadd -r app && useradd -r -g app app
 WORKDIR /app
 
 COPY --from=builder /app/target/release/inventario_api /app/
+COPY --from=builder /app/migrations /app/migrations
+COPY --from=builder /usr/local/cargo/bin/sqlx /usr/local/bin/
 
 RUN chown -R app:app /app
 
@@ -43,4 +49,4 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:3000/health || exit 1
 
-CMD ["./inventario_api"]
+CMD ["bash", "-c", "sqlx migrate run --database-url $DATABASE_URL && ./inventario_api"]
