--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
 VITE_AUTH_API_URL=http://localhost:8000/api
 VITE_PRODUCTS_API_URL=http://localhost:8001/api
 VITE_INVENTORY_API_URL=http://localhost:5002/api
+VITE_ORDERS_API_URL=http://localhost:8003/api
 VITE_APP_NAME=AudioHub
