update of the frontend integration of the payment service

--- a/orders-service/src/main/resources/.env
+++ b/orders-service/src/main/resources/.env
@@ -20,7 +20,7 @@ server:
 
 # JWT Configuration
 jwt:
-  secret: ${JWT_SECRET:a-string-secret-at-least-256-bits-long-for-HS256-algorithm}
+  secret: ${JWT_SECRET:MiSuperSecretKeyParaDistributed2025System!}
   expiration: 86400000 # 24 hours in milliseconds
 
 # Products Service Configuration
