--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "docker:run": "docker run -p 5173:80 frontend-vue",
     "docker:compose": "docker-compose up -d",
     "docker:compose-build": "docker-compose up -d --build",
-    "env:setup": "cp .env.example .env && echo '✅ .env creado. Edita con tus valores.'"
+    "env:setup": "cp .env.example .env && echo ''"
   },
   "dependencies": {
     "axios": "^1.13.2",
