--- a/notifications-service/dockerfile
+++ b/notifications-service/dockerfile
@@ -6,5 +6,6 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o main .
 FROM scratch
 COPY --from=builder /app/main /main
-EXPOSE 8080
+COPY --from=builder /app/.env /.env
+EXPOSE 5040
 CMD ["./main"]
