--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "env:setup": "cp .env.example .env && echo ''"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.22",
