--- a/notifications-service/dockerfile
+++ b/notifications-service/dockerfile
@@ -1,8 +1,9 @@
-FROM golang:1.25.5-alpine AS builder
+FROM golang:1.24-alpine AS builder
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
+RUN go get github.com/gin-contrib/cors
 RUN CGO_ENABLED=0 GOOS=linux go build -o main .
 FROM scratch
 COPY --from=builder /app/main /main
