--- a/orders-service/docker-compose.yml
+++ b/orders-service/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       DB_PASSWORD: orders_pass
       JWT_SECRET: MiSuperSecretKeyParaDistributed2025System!
       PRODUCTS_SERVICE_URL: http://host.docker.internal:8001
+      NOTIFICATIONS_SERVICE_URL: http://host.docker.internal:5040
       CORS_ORIGINS: http://localhost:5173,http://localhost:5174
       LOG_LEVEL: INFO
     extra_hosts:
