--- a/orders-service/src/main/resources/application.yml
+++ b/orders-service/src/main/resources/application.yml
@@ -22,24 +22,24 @@ server:
   servlet:
     context-path: /
 
-# JWT Configuration
 jwt:
   secret: ${JWT_SECRET:a-string-secret-at-least-256-bits-long-for-HS256-algorithm}
   expiration: 86400000 # 24 hours in milliseconds
 
-# Products Service Configuration
 products:
   service:
     url: ${PRODUCTS_SERVICE_URL:http://localhost:8001}
 
-# CORS Configuration
+notifications:
+  service:
+    url: ${NOTIFICATIONS_SERVICE_URL:http://localhost:5040}
+
 cors:
   allowed-origins: ${CORS_ORIGINS:http://localhost:5173,http://localhost:5174}
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
   allowed-headers: "*"
   allow-credentials: true
 
-# Logging
 logging:
   level:
     com.distributedsystem.orders: ${LOG_LEVEL:INFO}
